--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-
+<! - -
+= = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
+Name : index . html
+Assignment : Lab 1 Exercise A
+Author ( s ) : Hanna Cho
+Submission : Jan 17 , 2024
+Description : A simple HTML file .
+= = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
+-->
+<! DOCTYPE html >
+< html >
+< head >
+< title > My Simple HTML Page </ title >
+</ head >
+< body >
+<h1 > Welcome to My Webpage </ h1 >
+<p > This is a simple HTML document. </p >
+</ body >
+</ html >
